# transcription-script

./: .env.example  .gitignore  README.md  config.py  mypy.ini  pipeline.py  pyproject.toml  transcribe.py
