[project]
name = "transcription-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "whisperx>=3.8.2",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | data
)/
'''
