[project]
name = "transcription-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "torchcodec>=0.10.0",
    "whisperx>=3.8.2",
]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "transcription-script"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | data
)/
'''

[tool.mypy]
python_version = 3.11
strict = true
disable_error_code = ["import-untyped"]
